refactoring - some stylistic fixes